--- a/jprofile2 theme2.css
+++ b/jprofile2 theme2.css
@@ -181,8 +181,9 @@ section ,body{
     border-radius: 50%;
     overflow: hidden;
     /*border: 10px solid rgb(167, 125, 249); */
-    border: 10px solid #37393d;
-    box-shadow: 5px 7px 25px rgba(0, 0, 0, 0.5);
+    border: 10px solid #010101;
+    /* box-shadow: 5px 7px 25px rgba(0, 0, 0, 0.5); */
+    box-shadow: -11px 6px 2px 0px rgb(0 0 0);
     animation-name: floating;
     animation-duration: 3s;
     animation-iteration-count: infinite;
@@ -337,7 +338,7 @@ section ,body{
     border: 2.3px solid black;
     border-radius: 8px;
     box-shadow: 1px 2px 0.8px 1px rgba(0 0 0/100%);
-    background-color: #f7cb46;
+        background-color: #f7cb46;
     color: #f0ebd8;
     font-weight: 900;
         padding: 10px 112px 10px 112px;
@@ -529,6 +530,9 @@ section ,body{
         width: 320px;
         border-radius: 50%;
     }
+    .profilepic{
+        box-shadow: none;
+    }
 }
 
 /* ------------------3rd query--------------------------- */
@@ -643,7 +647,7 @@ section ,body{
     }
 
     .herotext h1 {
-        font-size: 1.6rem;
+        font-size: 1.20rem;
     }
 
     .profilepic {
@@ -657,6 +661,15 @@ section ,body{
 
 
 
+    .socials {
+        margin-left:4.1rem;
+
+    }
+
+    .btn1 {
+        margin-left: 2.8rem;
+
+    }
 
 
     
@@ -692,7 +705,7 @@ section ,body{
     }
 
     .herotext h1 {
-        font-size: 1.4rem;
+        font-size: 1.10rem;
     }
 
 
@@ -728,7 +741,7 @@ section ,body{
     }
 
     .herotext h1 {
-        font-size: 1.25rem;
+        font-size: 1.05rem;
     }
 
     #footer_contact {
@@ -742,8 +755,9 @@ section ,body{
     }
 
     .socials {
-        margin-left: -1rem;
-        font-size: 0.80rem;
+        margin-left: -5rem;
+        position: relative;
+        left: 4rem;
     }
 
     .btn1 {
