--- a/jprofile2 theme2.css
+++ b/jprofile2 theme2.css
@@ -8,6 +8,11 @@ html {
     scroll-behavior: smooth;
 }
 
+a{
+    text-decoration: none;
+    color: black;
+}
+}
 /* ========================================NAVBAR================================================================ */
 .navbar {
 
